@@ -56,6 +56,8 @@ Version 1.3.2
        were shown then in the log dialog. (Stefan)
 - BUG: In the TortoiseMerge settings, it was possible to select
        variable width fonts. (Stefan)
+- BUG: When selecting an error item in the repository browser, the error
+       message was copied to the URL box. (Stefan)
 
 Version 1.3.1
 - BUG: Patches with non ANSI or non UTF8 encoding couldn't be applied
